Design - fix small device align

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -265,6 +265,7 @@ article {
                 .site-title a{
                     font-size: 1.4em!important;
                     display: inline!important;
+                    padding:0;
                 }
                 .site-title a span{
                     font-size: 1em;
@@ -278,6 +279,7 @@ article {
                             a{
                                 line-height:1.3em;
                                 padding-right:1em;
+                                font-size:.9em;
                             }
                         }
                     }
@@ -286,7 +288,8 @@ article {
             p.legal {
                 background:#eaeaea;
                 text-align:center;
-                padding:3px;
+                padding:5px 3px;
+
             }
         }
         .content-wrapper {
@@ -297,6 +300,18 @@ article {
             height: auto;
             padding: 0 15px;
             width:auto;
+        }
+    }
+}
+
+@media (max-width:599px) {
+    .post-archive {
+        ul {
+            li {
+                time {
+                    display:none;
+                }
+            }
         }
     }
 }
